# dreem

./: .gitignore  404.html  CLAUDE.md  CNAME  LICENSE  README.md  UV_MIGRATION.md  base.yaml  codecov.yml  environment.yml  environment_cpu.yml  environment_osx-arm64.yml  fast_loading.yaml  git  index.html  install.bat  install.sh  logging.yaml  mkdocs.yml  objects.inv  pyproject.toml  rope.ipynb  run_batch_job.py  run_trainer.py  sitemap.xml  versions.json
.claude/: CLAUDE.md
.github/workflows/: build.yml  ci-windows.yml  ci.yml  codespell.yml  docs.yml  pr-preview.yml
0.0.1a1/: 404.html  index.html  sitemap.xml
0.0.1a1/cli/: index.html
0.0.1a1/configs/: index.html
0.0.1a1/io/: index.html
0.0.1a1/models/: index.html
0.0.1a1/search/: search_index.json
0.0.1a1/usage/: index.html
0.0.1a3/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1a3/cli/: index.html
0.0.1a3/configs/: index.html
0.0.1a3/io/: index.html
0.0.1a3/models/: index.html
0.0.1a3/search/: search_index.json
0.0.1a3/usage/: index.html
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/cli/: index.html
0.1.0/configs/: index.html
0.1.0/installation/: index.html
0.1.0/io/: index.html
0.1.0/models/: index.html
0.1.0/quickstart/: index.html
0.1.0/usage/: index.html
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/cli/: index.html
0.2.0/configs/: index.html
0.2.0/installation/: index.html
0.2.0/io/: index.html
0.2.0/models/: index.html
0.2.0/quickstart/: index.html
0.2.0/search/: search_index.json
0.2.0/usage/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/cli/: index.html
0.2.1/configs/: index.html
0.2.1/installation/: index.html
0.2.1/io/: index.html
0.2.1/models/: index.html
0.2.1/quickstart/: index.html
0.2.1/search/: search_index.json
0.2.1/usage/: index.html
0.2.3/: 404.html  index.html  objects.inv  sitemap.xml
0.2.3/Examples/: index.html
0.2.3/cli/: index.html
0.2.3/configs/: index.html
0.2.3/installation/: index.html
0.2.3/io/: index.html
0.2.3/models/: index.html
0.2.3/quickstart/: index.html
0.2.3/search/: search_index.json
0.2.3/usage/: index.html
0.2.3/visualizer/: index.html
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/Examples/: index.html
0.4/cli/: index.html
0.4/configs/: index.html
0.4/datasets/: index.html
0.4/installation/: index.html
0.4/io/: index.html
0.4/models/: index.html
0.4/models_pg/: index.html
0.4/quickstart/: index.html
0.4/search/: search_index.json
0.4/usage/: index.html
0.4/visualizer/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/Examples/: index.html
0.5.0/cli/: index.html
0.5.0/configs/: index.html
0.5.0/datasets/: index.html
0.5.0/installation/: index.html
0.5.0/io/: index.html
0.5.0/models/: index.html
0.5.0/models_pg/: index.html
0.5.0/quickstart/: index.html
0.5.0/search/: search_index.json
0.5.0/usage/: index.html
0.5.0/visualizer/: index.html
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/Examples/: index.html
0.5.1/cli/: index.html
0.5.1/configs/: index.html
0.5.1/datasets/: index.html
0.5.1/installation/: index.html
0.5.1/io/: index.html
0.5.1/models/: index.html
0.5.1/models_pg/: index.html
0.5.1/quickstart/: index.html
0.5.1/search/: search_index.json
0.5.1/usage/: index.html
0.5.1/visualizer/: index.html
Examples/dreem-demo/: index.html
Examples/microscopy-demo-full-api/: index.html
Examples/microscopy-demo-simple/: index.html
assets/javascripts/: bundle.081f42fc.min.js  bundle.c8b220af.min.js
biogtr/: __init__.py  cli.py  config.py  data_structures.py  gtr_runner.py  visualize.py
biogtr/datasets/: __init__.py  base_dataset.py  cell_tracking_dataset.py  compute_features.py  data_utils.py  eval_dataset.py  lazy_loaders.py  microscopy_dataset.py  parsers.py  sleap_dataset.py  tracking_dataset.py
biogtr/inference/: __init__.py  boxes.py  metrics.py  post_processing.py  track.py  track_queue.py  tracker.py
biogtr/io/: __init__.py  association_matrix.py  config.py  frame.py  instance.py  track.py  visualize.py
biogtr/models/: __init__.py  attention_head.py  embedding.py  global_tracking_transformer.py  gtr_runner.py  mlp.py  model_utils.py  transformer.py  visual_encoder.py
biogtr/training/: 190612_110405_wt_18159111_rig2.2@11730.slp  __init__.py  config.py  losses.py  train.py
cli/: index.html
configs/: index.html
configs/config/: index.html
configs/eval/: index.html
configs/inference/: index.html
configs/training/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/Examples/: index.html
dev/cli/: index.html
dev/configs/: index.html
dev/datasets/: index.html
dev/installation/: index.html
docs/: cli.md  datasets.md  index.md  installation.md  models_pg.md  quickstart.md  usage.md  visualizer.md
dreem/: __init__.py  cli.py  system_info.py  version.py
examples/: cellpose-detection.py  create_animation.py  dreem-demo.ipynb  extract_metrics.ipynb  microscopy-demo-full-api.ipynb  microscopy-demo-simple.ipynb  microscopy-demo-simple.py  microscopy-demo.ipynb  quickstart.ipynb  run_cellpose_segmentation.py  tune_confidence_threshold.ipynb
fix-microscopy-demo/: TODO.md
fix_inference_config/: TODO.md
flexible_cellpose_inputs/: TODO.md
hf_space/: .gitignore  Dockerfile  README.md  TODO.md  app.py  requirements.txt
installation/: index.html
io/: index.html
models/: index.html
pr174-review-fixes/: TODO.md
quickstart/: index.html
scripts/: extract_metrics.ipynb  gen_ref_pages.py  get_changed_docs_urls.py  reorder_versions.py  run_eval.py  run_tracker.py  run_trainer.py
search/: search_index.json
tests/: Untitled.ipynb  __init__.py  conftest.py  test_cellpose_utils.py  test_config.py  test_conversion.py  test_data_model.py  test_data_structures.py  test_datasets.py  test_glob_ordering.py  test_inference.py  test_models.py  test_pretrained.py  test_system_info.py  test_training.py  test_version.py  test_visualize.py
usage/: index.html
v0.2.3/: 404.html  index.html  sitemap.xml
(+1131 files in other folders)
