[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dreem"
authors = [
    {name = "Arlo Sheridan", email = "asheridan@salk.edu"},
    {name = "Aaditya Prasad", email = "aprasad@salk.edu"},
    {name = "Vincent Tu", email = "vtu@ucsd.edu"},
    {name = "Uri Manor", email = "umanor@salk.edu"},
    {name = "Talmo Pereira", email = "talmo@salk.edu"},
]
description = "Global Tracking Transformers for biological multi-object tracking."
requires-python = ">=3.12"
keywords = ["gtr", "mot"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "lightning",
    "imageio",
    "imageio-ffmpeg",
    "av",
    "albumentations",
    "hydra-core",
    "sleap-io",
    "matplotlib",
    "opencv-python < 4.9.0",
    "ffmpeg-python",
    "motmetrics",
    "seaborn",
    "wandb",
    "timm",
    "huggingface-hub[cli]",
    "scikit-image",
    "numpy < 2.0"
]
dynamic = ["version", "readme"]

[tool.setuptools]
packages = ["dreem"]

[tool.setuptools.dynamic]
version = {attr = "dreem.version.__version__"}
readme = {file = ["README.md"]}

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "codespell",
    "toml",
    "twine",
    "build",
    "mkdocs-material[imaging]",
    "mkdocs-jupyter",
    "mkdocstrings[python]>=0.18",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mike",
    "mkdocs-section-index"
]
cuda = [
    "torch >= 2.0.0",
    "torchvision"
]
cpu = [
    "torch >= 2.0.0",
    "torchvision"
]
apple-silicon = [
    "torch >= 2.0.0",
    "torchvision"
]

[project.scripts]
dreem-train = "dreem.training.train:run"
dreem-eval = "dreem.inference.eval:run"
dreem-track = "dreem.inference.track:run"
dreem-visualize = "dreem.io.visualize:main"

[project.urls]
Homepage = "https://github.com/talmolab/dreem"
Repository = "https://github.com/talmolab/dreem"

[tool.black]
line-length = 88

[pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "D",    # pydocstyle
    "I",    # isort
]
ignore = ["E501"]  # Line too long - let formatter handle this

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "*.po,*.ts,./docs/_build,./docs/venv,./site,*.ipynb,.git,__pycache__,*.csv"
ignore-words-list = "te,sleeap,thinc,mot,MOT"
