[project]
name = "dreem-track"
description = "Global Tracking Transformers for biological multi-object tracking."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.12"
authors = [
    {name = "Arlo Sheridan", email = "asheridan@salk.edu"},
    {name = "Aaditya Prasad", email = "aprasad@salk.edu"},
    {name = "Vincent Tu", email = "vtu@ucsd.edu"},
    {name = "Uri Manor", email = "umanor@salk.edu"},
    {name = "Talmo Pereira", email = "talmo@salk.edu"},
]
keywords = ["gtr", "mot", "tracking", "deep learning", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # PyTorch ecosystem
    "torch>=2.0.0",
    "torchvision",
    "lightning",
    # Image/video I/O
    "imageio>=2.34.0",
    "imageio-ffmpeg",
    "av",
    # Image processing
    "albumentations",
    "opencv-python<4.9.0",
    "numpy<2.0",  # Required for opencv-python<4.9.0 compatibility
    # Configuration
    "hydra-core",
    # Data I/O
    "sleap-io",
    # Visualization
    "matplotlib",
    "seaborn",
    # Metrics and logging
    "motmetrics",
    "wandb",
    # Models
    "timm",
    "huggingface-hub",
]
dynamic = ["version"]

[project.optional-dependencies]
encoder = ["scikit-image"]  # Required for visual encoder functionality

[project.scripts]
dreem-train = "dreem.training.train:run"
dreem-eval = "dreem.inference.eval:run"
dreem-track = "dreem.inference.track:run"
dreem-visualize = "dreem.io.visualize:main"

[project.urls]
Homepage = "https://github.com/talmolab/dreem"
Repository = "https://github.com/talmolab/dreem"

# =============================================================================
# Build system - using Hatchling
# =============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dreem"]

[tool.hatch.version]
path = "dreem/version.py"

# =============================================================================
# uv configuration for PyTorch with CUDA support
# =============================================================================
# Use CUDA 12.1 builds on Linux/Windows, fall back to PyPI on macOS (MPS)

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# =============================================================================
# Dependency groups (dev tools)
# =============================================================================
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5.0",
    "codespell",
    "toml",
    "twine",
    "build",
    "mkdocs-material[imaging]",
    "mkdocs-jupyter",
    "mkdocstrings[python]>=0.18",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mike",
    "mkdocs-section-index",
]

# =============================================================================
# Code quality tools
# =============================================================================
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "D",    # pydocstyle
    "I",    # isort
]
ignore = ["E501"]  # Line too long - let formatter handle this

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "*.po,*.ts,./docs/_build,./docs/venv,./site,*.ipynb,.git,__pycache__,*.csv"
ignore-words-list = "te,sleeap,thinc,mot,MOT"

[tool.pytest.ini_options]
testpaths = ["tests"]
